--- a/.config/git/config
+++ b/.config/git/config
@@ -1,7 +1,3 @@
-[core]
-	autoCRLF = false
-	editor = 'D:\\app\\prog\\vim\\gvim.exe' -c 'set fenc=utf-8'
-
 [user]
 	name = rapan931
 	email = 24415677+rapan931@users.noreply.github.com
@@ -18,19 +14,17 @@
 
 	b = branch
 
-	co = checkout
-
 	cp = cherry-pick
 
-	cbr = switch -c
+	sw = switch
 
 	d = diff
 	dc = diff --cached
-	dg = !git d | nkf -s | gvim -
 	dn = diff --name-only
 
 	l = log
 	ln = log --name-only
+	ls = log --name-status
 	lp = log -p
 	ltree = log --graph --oneline --date=iso                   --pretty=format:'%C(yellow)%h%C(reset) %C(magenta)[%ad]%C(reset)%C(auto)%d%C(reset) %C(cyan)@%an%C(reset) %s'
 	lone  = log --oneline --date=short --date=iso --date-order --pretty=format:'%C(yellow)%h%C(reset) %C(magenta)[%ad]%C(reset)%C(auto)%d%C(reset) %C(cyan)@%an%C(reset) %s'
@@ -38,7 +32,8 @@
 	st = status --short --branch
 	stig = status --ignored
 
-	windiff = difftool -y -d -t WinMerge
-	winmerge = difftool -y -d -t WinMerge
-
 	it = !git init && git add . && git commit -m \"Init\"
+[credential]
+	helper = store
+[init]
+	defaultBranch = main
