--- a/config/starship.toml
+++ b/config/starship.toml
@@ -1,6 +1,6 @@
 [character]
-error_symbol = "[❯❯](bold red)"
-success_symbol = "[❯❯](bold green)"
+error_symbol = "[>](bold red)"
+success_symbol = "[>](bold green)"
 # vicmd_symbol = "[❮❮](bold yellow)"
 
 [package]
