--- a/config/git/config
+++ b/config/git/config
@@ -45,5 +45,6 @@
 	editor = nvim
 [push]
 	useForceIfIncludes = true
+	default = current
 [commit]
 	template = /home/rapan931/.config/git/.gitmessage
