--- a/config/starship.toml
+++ b/config/starship.toml
@@ -1,3 +1,8 @@
+# format = '''
+# [┌───────────────────>](bold green)
+# [│](bold green)$directory$rust$package
+# [└─>](bold green) '''
+
 [character]
 error_symbol = "[>](bold red)"
 success_symbol = "[>](bold green)"
